--- a/story/rooms/command-centre.html
+++ b/story/rooms/command-centre.html
@@ -72,7 +72,7 @@
                 document.getElementById("roomName").textContent = `Room: ${roomData["roomName"]}`;
                 const playersArray = roomData["roomPlayers"] ? Object.values(roomData["roomPlayers"]) : [];
                 document.getElementById("playerCount").textContent = `Players: ${playersArray.length}/4`;
-                document.getElementById("yourName").textContent = `You: ${username}`;
+                document.getElementById("yourName").textContent = "";
 
                 // Figure out what puzzle status the player has 
                 enablerComplete = roomData["roomPlayers"][localUserId]["enablerComplete"];
