--- a/story/rooms/situation-room.html
+++ b/story/rooms/situation-room.html
@@ -32,6 +32,12 @@
         <div class="loading-spinner"></div>
         <div id="loadingMessage" class="loading-message">Loading...</div>
     </div>
+    
+    <!-- Objective Display -->
+    <div id="objectiveDisplay" class="objective-display game-panel">
+        <h3>Objective</h3>
+        <p>Loading objective...</p>
+    </div>
 
     <script type="module">
         import { updatePlayer, listenToRoom, updateRoleList, navigateToRoom, appendDayScore, incrementEnabledCompletions, progressDay, loadRooms } from "../../src/js/main.js";
