--- a/story/rooms/research-lab.html
+++ b/story/rooms/research-lab.html
@@ -31,6 +31,12 @@
         <div class="loading-spinner"></div>
         <div id="loadingMessage" class="loading-message">Loading...</div>
     </div>
+    
+    <!-- Objective Display -->
+    <div id="objectiveDisplay" class="objective-display game-panel">
+        <h3>Objective</h3>
+        <p>Loading objective...</p>
+    </div>
 
     <script type="module">
         import { updatePlayer, listenToRoom, updateRoleList, generateActions, navigateToRoom } from "../../src/js/main.js";
@@ -229,7 +235,7 @@
             }
         }
 
-                // Set up real-time listener for game info updates
+        // Set up real-time listener for game info updates
         const unsubscribe = listenToRoom(roomId, (roomData) => {
             if (roomData) {
                 console.log("Room updated.")
