--- a/create-room.html
+++ b/create-room.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Room - Athena</title>
     <link rel="icon" href="data:,">
-  <script type="module" crossorigin src="/athena/assets/createRoom-DkP402RH.js"></script>
-  <link rel="modulepreload" crossorigin href="/athena/assets/main-3GqDBcTq.js">
-  <link rel="stylesheet" crossorigin href="/athena/assets/main-D0TiZtJm.css">
+  <script type="module" crossorigin src="/athena/assets/createRoom-BcfxH6vu.js"></script>
+  <link rel="modulepreload" crossorigin href="/athena/assets/main-kJiNQ_X-.js">
+  <link rel="stylesheet" crossorigin href="/athena/assets/main-Bh_IRuan.css">
 </head>
 <body>
     <button class="back-button" onclick="window.location.href='index.html'">← Back</button>
@@ -28,6 +28,7 @@
     </div>
     <div id="loadingContainer" class="loading-container" style="display: none;">
         <div class="loading-spinner"></div>
+        <div id="loadingMessage" class="loading-message">Loading...</div>
     </div>
 
 </body>
