--- a/story/rooms/command-centre.html
+++ b/story/rooms/command-centre.html
@@ -5,16 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Athena</title>
     <link rel="icon" href="data:,">
-  <script type="module" crossorigin src="/athena/assets/commandCentre-CItEgxGl.js"></script>
-  <link rel="modulepreload" crossorigin href="/athena/assets/main-3GqDBcTq.js">
-  <link rel="modulepreload" crossorigin href="/athena/assets/typewriter-CCdU_-e1.js">
-  <link rel="stylesheet" crossorigin href="/athena/assets/main-D0TiZtJm.css">
+  <script type="module" crossorigin src="/athena/assets/commandCentre-BIgK_IF-.js"></script>
+  <link rel="modulepreload" crossorigin href="/athena/assets/main-kJiNQ_X-.js">
+  <link rel="modulepreload" crossorigin href="/athena/assets/objectives-CwcHldjI.js">
+  <link rel="modulepreload" crossorigin href="/athena/assets/typewriter-KOhSjPsI.js">
+  <link rel="modulepreload" crossorigin href="/athena/assets/toast-Ch3uAxuw.js">
+  <link rel="stylesheet" crossorigin href="/athena/assets/main-Bh_IRuan.css">
 </head>
 <body>
     <button id="back" class="back-button">← Back to Situation Room</button>
     <!-- Game Info Display -->
-    <div id="gameInfo" class="game-info">
+    <div id="gameInfo" class="game-info game-panel">
         <div id="roomName">Room: Loading...</div>
+        <div id="currentDay">Day: Loading...</div>
         <div id="playerCount">Players: Loading...</div>
         <div id="yourName">You: Loading...</div>
         <div id="playerList" class="player-list">
@@ -32,6 +35,13 @@
     </div>
     <div id="loadingContainer" class="loading-container" style="display: none;">
         <div class="loading-spinner"></div>
+        <div id="loadingMessage" class="loading-message">Loading...</div>
+    </div>
+    
+    <!-- Objective Display -->
+    <div id="objectiveDisplay" class="objective-display game-panel">
+        <h3>Objective</h3>
+        <p>Loading objective...</p>
     </div>
 
 </body>
