--- a/story/finalise-roles.html
+++ b/story/finalise-roles.html
@@ -5,28 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Athena</title>
     <link rel="icon" href="data:,">
-  <script type="module" crossorigin src="/athena/assets/finaliseRoles-C02GEAh6.js"></script>
-  <link rel="modulepreload" crossorigin href="/athena/assets/main-3GqDBcTq.js">
-  <link rel="modulepreload" crossorigin href="/athena/assets/typewriter-CCdU_-e1.js">
-  <link rel="stylesheet" crossorigin href="/athena/assets/main-D0TiZtJm.css">
+  <script type="module" crossorigin src="/athena/assets/finaliseRoles-BJ6JBfJM.js"></script>
+  <link rel="modulepreload" crossorigin href="/athena/assets/main-kJiNQ_X-.js">
+  <link rel="modulepreload" crossorigin href="/athena/assets/typewriter-KOhSjPsI.js">
+  <link rel="modulepreload" crossorigin href="/athena/assets/objectives-CwcHldjI.js">
+  <link rel="modulepreload" crossorigin href="/athena/assets/toast-Ch3uAxuw.js">
+  <link rel="stylesheet" crossorigin href="/athena/assets/main-Bh_IRuan.css">
 </head>
 <body>
     <!-- Game Info Display -->
-    <div id="gameInfo" class="game-info">
+    <div id="gameInfo" class="game-info game-panel">
         <div id="roomName">Room: Loading...</div>
         <div id="playerCount">Players: Loading...</div>
         <div id="yourName">You: Loading...</div>
     </div>
 
     <div class="menu-container">
-        <h1 id="lobbyHeader">Team Assembly Complete</h1>
-        <div id="playerList" class="player-list">
+        <h1 id="lobbyHeader">Briefing Room</h1>
+        <div id="playerList" class="player-list game-style" style="margin-bottom: 24px;">
             <h3>Team Composition</h3>
             <ul id="players"></ul>
         </div>
     </div>
     <div id="loadingContainer" class="loading-container" style="display: none;">
         <div class="loading-spinner"></div>
+        <div id="loadingMessage" class="loading-message">Waiting for host to start the mission...</div>
     </div>
 
 </body>
