--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="subtitle">Digital Escape Room</div>
         <div class="description">
             <p>Welcome to the Athena Digital Escape Room. Work with your team to solve the puzzles required and save the facility from a rouge AI.</p>
-            <p>Remember to chose your role wisely! Each team member will be required to solve unique puzzles based on their role's real-world skillset.</p>
+            <p>Remember to choose your role wisely! Each team member will be required to solve unique puzzles based on their role's real-world skillset.</p>
         </div>
         <div class="button-container">
             <button class="std-button" onclick="window.location.href='create-room.html'">Create Room</button>
