Changed background to black, fixed issue with not going back to index at game end

--- a/index.html
+++ b/index.html
@@ -10,8 +10,20 @@
 <body>
     <div class="menu-container">
         <h1>Athena</h1>
-        <button class="std-button" onclick="window.location.href='create-room.html'">Create Room</button>
-        <button class="std-button" id="joinRoomBtn">Join Room</button>
+        <div class="subtitle">Digital Escape Room</div>
+        <div class="description">
+            <p>Welcome to the Athena Digital Escape Room. Work with your team to solve the puzzles required and save the facility from a rogue AI.</p>
+            <p>Remember to choose your role wisely! Each team member will be required to solve unique puzzles based on their role's real-world skillset.</p>
+        </div>
+        <div class="button-container">
+            <button class="std-button" onclick="window.location.href='create-room.html'">Create Room</button>
+            <button class="std-button" id="joinRoomBtn">Join Room</button>
+        </div>
+        <div class="tech-decoration">
+            <div class="tech-line"></div>
+            <div class="tech-dot"></div>
+            <div class="tech-line"></div>
+        </div>
     </div>
     <div id="loadingContainer" class="loading-container" style="display: none;">
         <div class="loading-spinner"></div>
