--- a/story/rooms/situation-room.html
+++ b/story/rooms/situation-room.html
@@ -542,7 +542,7 @@
                         }
                         await typewriter.showSequence(finalDialogue, {
                             onContinue: () => {
-                                window.location.href = "/index.html"
+                                window.location.href = "../../index.html"
                             }
                         });
                     }
@@ -609,7 +609,7 @@
                 } 
                 else {
                     console.error("Room not found");
-                    window.location.href = "/index.html";
+                    window.location.href = "../../index.html";
                 }
             }
         }); 
