--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Athena</title>
     <link rel="icon" href="data:,">
-  <script type="module" crossorigin src="/athena/assets/main-DAfXenge.js"></script>
-  <link rel="modulepreload" crossorigin href="/athena/assets/main-C1qx7syO.js">
-  <link rel="stylesheet" crossorigin href="/athena/assets/main-DQBMH0wm.css">
+  <script type="module" crossorigin src="/athena/assets/main-DTrkKvrd.js"></script>
+  <link rel="modulepreload" crossorigin href="/athena/assets/main-wWE9B_H6.js">
+  <link rel="stylesheet" crossorigin href="/athena/assets/main-1_vf0b26.css">
 </head>
 <body>
     <div class="menu-container">
@@ -31,5 +31,6 @@
         <div class="loading-spinner"></div>
         <div id="loadingMessage" class="loading-message">Loading...</div>
     </div>
+    <div class="version-number" id="versionNumber">v1.0.0</div>
 </body>
 </html> 
