--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Athena</title>
     <link rel="icon" href="data:,">
-  <script type="module" crossorigin src="/athena/assets/main-DTrkKvrd.js"></script>
+  <script type="module" crossorigin src="/athena/assets/main-BYp-3qed.js"></script>
   <link rel="modulepreload" crossorigin href="/athena/assets/main-wWE9B_H6.js">
   <link rel="stylesheet" crossorigin href="/athena/assets/main-1_vf0b26.css">
 </head>
@@ -31,6 +31,6 @@
         <div class="loading-spinner"></div>
         <div id="loadingMessage" class="loading-message">Loading...</div>
     </div>
-    <div class="version-number" id="versionNumber">v1.0.0</div>
+    <div class="version-number">v0.5.3</div>
 </body>
 </html> 
