Added version number, and made text black when rooms are full

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                 localStorage.removeItem("availableRooms");
             }
         });
+        
+
     </script>
+    <div class="version-number">v0.5.3</div>
 </body>
 </html> 
