--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
     <div id="loadingContainer" class="loading-container" style="display: none;">
         <div class="loading-spinner"></div>
         <div id="loadingMessage" class="loading-message">Loading...</div>
-    </div>
+    </div>
     <div class="version-number">v0.5.4</div>
+    
+    <!-- Firebase CDN -->
+    <script src="https://www.gstatic.com/firebasejs/11.9.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/11.9.1/firebase-firestore-compat.js"></script>
+    
 </body>
 </html> 
