--- a/room-lobby.html
+++ b/room-lobby.html
@@ -6,6 +6,10 @@
     <title>Room Lobby - Athena</title>
     <link rel="stylesheet" href="src/styles/styles.css">
     <link rel="icon" href="data:,">
+    
+    <!-- Firebase CDN - Load in head to ensure it's available -->
+    <script src="https://www.gstatic.com/firebasejs/11.9.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/11.9.1/firebase-firestore-compat.js"></script>
 </head>
 <body>
     <!-- Game Info Display -->
@@ -35,9 +39,28 @@
     </div>
 
     <script type="module">
-        import { loadRooms, removeUserFromRoom, updatePlayer, listenToRoom, deleteRoom } from "./src/js/main.js";
-        import { setCurrentObjective } from "./src/js/objectives.js";
-        import toast from "./src/js/toast.js";
+        // Wait for Firebase to be fully loaded
+        function waitForFirebase() {
+            return new Promise((resolve) => {
+                if (window.firebase && window.firebase.firestore) {
+                    resolve();
+                } else {
+                    // Check every 100ms for Firebase to be ready
+                    const interval = setInterval(() => {
+                        if (window.firebase && window.firebase.firestore) {
+                            clearInterval(interval);
+                            resolve();
+                        }
+                    }, 100);
+                }
+            });
+        }
+        
+        // Wait for Firebase, then import and run
+        waitForFirebase().then(async () => {
+            const { loadRooms, removeUserFromRoom, updatePlayer, listenToRoom, deleteRoom } = await import("./src/js/main.js");
+            const { setCurrentObjective } = await import("./src/js/objectives.js");
+            const toast = await import("./src/js/toast.js");
 
         // Get room data from localStorage
         const roomId = localStorage.getItem("connectedRoomId");
@@ -321,6 +344,7 @@
                 console.error("Error leaving room:", error);
                 alert("Failed to leave room. Please try again.");
             }
+        });
         });
     </script>
 </body>
