--- a/story/finalise-roles.html
+++ b/story/finalise-roles.html
@@ -32,29 +32,10 @@
     </div>
 
     <script type="module">
-        // Wait for Firebase to be fully loaded
-        function waitForFirebase() {
-            return new Promise((resolve) => {
-                if (window.firebase && window.firebase.firestore) {
-                    resolve();
-                } else {
-                    // Check every 100ms for Firebase to be ready
-                    const interval = setInterval(() => {
-                        if (window.firebase && window.firebase.firestore) {
-                            clearInterval(interval);
-                            resolve();
-                        }
-                    }, 100);
-                }
-            });
-        }
-        
-        // Wait for Firebase, then import and run
-        waitForFirebase().then(async () => {
-            const { updatePlayer, listenToRoom, progressDay, ackReshuffle } = await import("../src/js/main.js");
-            const TypewriterDialogue = await import("../src/js/typewriter.js");
-            const { setCurrentObjective } = await import("../src/js/objectives.js");
-            const toast = await import("../src/js/toast.js");
+        import { updatePlayer, listenToRoom, progressDay, ackReshuffle } from "../src/js/main.js";
+        import TypewriterDialogue from "../src/js/typewriter.js";
+        import { setCurrentObjective } from "../src/js/objectives.js";
+        import toast from "../src/js/toast.js";
 
         // Get room data from localStorage
         const roomId = localStorage.getItem("connectedRoomId");
@@ -332,7 +313,6 @@
             if (unsubscribe) {
                 unsubscribe();
             }
-        });
         });
     </script>
 </body>
