--- a/story/rooms/research-lab.html
+++ b/story/rooms/research-lab.html
@@ -6,6 +6,10 @@
     <title>Athena</title>
     <link rel="stylesheet" href="../../src/styles/styles.css">
     <link rel="icon" href="data:,">
+    
+    <!-- Firebase CDN - Load in head to ensure it's available -->
+    <script src="https://www.gstatic.com/firebasejs/11.9.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/11.9.1/firebase-firestore-compat.js"></script>
 </head>
 <body>
     <button id="back" class="back-button">← Back to Situation Room</button>
