--- a/index.html
+++ b/index.html
@@ -5,11 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Athena</title>
     <link rel="icon" href="data:,">
-    
-    <!-- Firebase CDN - Load in head to ensure it's available -->
-    <script src="https://www.gstatic.com/firebasejs/11.9.1/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/11.9.1/firebase-firestore-compat.js"></script>
-  <script type="module" crossorigin src="/athena/assets/main.js"></script>
+  <script type="module" crossorigin src="/athena/assets/main-KYJxQm2R.js"></script>
+  <link rel="modulepreload" crossorigin href="/athena/assets/main-CaYjMSie.js">
   <link rel="stylesheet" crossorigin href="/athena/assets/main-Bz2a22E1.css">
 </head>
 <body>
@@ -33,8 +30,7 @@
     <div id="loadingContainer" class="loading-container" style="display: none;">
         <div class="loading-spinner"></div>
         <div id="loadingMessage" class="loading-message">Loading...</div>
-    </div>
+    </div>
     <div class="version-number">v0.5.4</div>
-    
 </body>
 </html> 
