--- a/story/role-select.html
+++ b/story/role-select.html
@@ -5,11 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Athena</title>
     <link rel="icon" href="data:,">
-    
-    <!-- Firebase CDN - Load in head to ensure it's available -->
-    <script src="https://www.gstatic.com/firebasejs/11.9.1/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/11.9.1/firebase-firestore-compat.js"></script>
-  <script type="module" crossorigin src="/athena/assets/main.js"></script>
+  <script type="module" crossorigin src="/athena/assets/roleSelect-D_WA3N2R.js"></script>
+  <link rel="modulepreload" crossorigin href="/athena/assets/main-CaYjMSie.js">
+  <link rel="modulepreload" crossorigin href="/athena/assets/typewriter-KOhSjPsI.js">
+  <link rel="modulepreload" crossorigin href="/athena/assets/objectives-DTNZ8ZM1.js">
   <link rel="stylesheet" crossorigin href="/athena/assets/main-Bz2a22E1.css">
 </head>
 
